--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,23 @@
   <div>
     {{ section.content | safe }}
   </div>
+  <div>
+    <h2>最新活動</h2>
+    {% for page in section.pages -%}
+    <section>
+      <hgroup>
+        <h3>
+          {{page.title}}
+        </h3>
+        <p>{{page.date}}</p>
+      </hgroup>
+      <p>
+        {{page.description}}
+      </p>
+      <a href="{{page.path}}">Read more</a>
+    </section>
+
+    {% endfor -%}
+  </div>
 </main>
 {% endblock content %}
